@@ -12,7 +12,7 @@
 
     <groupId>io.swagger.codegen.v3</groupId>
     <artifactId>swagger-codegen-generators</artifactId>
-    <version>1.0.29-SNAPSHOT</version>
+    <version>1.0.29</version>
     <packaging>jar</packaging>
 
     <build>
@@ -66,10 +66,12 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.22.2</version>
                 <configuration>
                     <argLine>
                         -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar
+                        -XX:+IgnoreUnrecognizedVMOptions
+                        --add-opens=java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -252,7 +254,7 @@
         </dependency>
     </dependencies>
     <properties>
-        <swagger-codegen-version>3.0.29-SNAPSHOT</swagger-codegen-version>
+        <swagger-codegen-version>3.0.29</swagger-codegen-version>
         <swagger-parser-version>2.0.28</swagger-parser-version>
         <swagger-core-version>2.1.11</swagger-core-version>
         <jackson-version>2.12.1</jackson-version>
